--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,6 +9,8 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=info
 logging.level.org.hibernate.SQL=info
-logging.level.com.example.gourmand=info
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+logging.level.com.example.gourmand=debug
+server.error.include-message=always
+server.error.include-binding-errors=always
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
